[gd_scene load_steps=9 format=3 uid="uid://byx0paodw1xfl"]

[ext_resource type="Shader" path="res://ui/blur.gdshader" id="1_jitqa"]
[ext_resource type="Theme" uid="uid://b8xw3k8erq8w0" path="res://ui/ui_theme.tres" id="2_etss8"]
[ext_resource type="Script" path="res://ui/enter_highscore_menu.gd" id="3_gr3vn"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ih6ig"]
shader = ExtResource("1_jitqa")
shader_parameter/blur = 2.5
shader_parameter/brightness = 0.75

[sub_resource type="InputEventAction" id="InputEventAction_gapih"]
action = &"ui_accept"

[sub_resource type="Shortcut" id="Shortcut_rha1r"]
events = [SubResource("InputEventAction_gapih")]

[sub_resource type="InputEventAction" id="InputEventAction_763ua"]
action = &"ui_cancel"

[sub_resource type="Shortcut" id="Shortcut_3ylqc"]
events = [SubResource("InputEventAction_763ua")]

[node name="EnterHighscoreMenu" type="ColorRect"]
material = SubResource("ShaderMaterial_ih6ig")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_etss8")
script = ExtResource("3_gr3vn")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(512, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HeaderLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Score: -42"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Enter your name below to save your score."

[node name="NameEditBox" type="LineEdit" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Please enter your name here..."
clear_button_enabled = true

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 16

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="OkButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
shortcut = SubResource("Shortcut_rha1r")
text = "OK"

[node name="CancelButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
shortcut = SubResource("Shortcut_3ylqc")
text = "Cancel"
